--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,7 +5,7 @@
     <title>New Page</title>
   </head>
   <body>
-    <h1>Add A New Show or Movie</h1>
+    <h1>Add A New Movie</h1>
     <form action="/movies" method="POST">
         <input type="text" placeholder="name" name="name" style="height: 30px;"><br>
         <input type="url" placeholder="image" name="img" style="height: 30px;"><br>
