--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: poppins;
+  background-image: url("https://t4.ftcdn.net/jpg/03/32/43/51/360_F_332435174_apBQAtBZhINlPp6jE6odtxljMrVRQSCq.jpg");
+  background-size: cover;
 }
 
 ul{
@@ -25,7 +27,9 @@ nav{
 }
 
 .logo img{
-  height: 45px;
+  height: 55px;
+  border-radius: 10px;
+
 }
 
 nav .menu{
@@ -38,7 +42,7 @@ nav .menu li a{
   margin: 0px;
   padding: 0px 22px;
   display: flex;
-  font-size: 0.8rem;
+  font-size: 40px;
   text-transform: uppercase
   font-weight: 500;
   color: #585858
@@ -47,7 +51,8 @@ nav .menu li a{
 
 #main{
   padding-top: 80px;
-
+  /* background-image: url("https://us.123rf.com/450wm/kesu87/kesu871803/kesu87180300023/97613543-cinema-concept-of-vintage-film-reels-black-board-and-projector-ond-old-wooden-background-.jpg?ver=6"); */
+  background-size: cover;
 }
 
 /* .movies-heading{
@@ -59,9 +64,92 @@ nav .menu li a{
   overflow: hidden;
 } */
 
-.img{
-  width: 100%
-  height: 100%
-  object-fit: cover;
-  object-poistion: top;
+/* .img{
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover;
+  object-poistion: top; */
+  /* display: flex;
+  flex-direction: row;
+  background-color: blue; */
+
+
+.movie-container{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-auto-flow: column;
+  gap: 20px;
+  overflow-x: auto; */
+  /* background-color: blue;
+  /* display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center; */
+}
+
+.small-poster {
+  width: 20vw;
+  height: 40vh;
+  box-shadow: 5px 15px 30px;
+  border-radius: 10px;
+  margin: 0px 20px 10px 20px;
+  overflow: hidden;
+}
+
+.movies-heading{
+  margin-left: 24px;
+  color: #FF00FF
+}
+
+.show-main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #10c5c9;
+  font-style: oblique;
+  font-family: Fantasy;
+}
+
+.show-image{
+  width: 280px;
+}
+
+.title{
+  display: block;
+  font-size: 1.5em;
+  font-weight: bold;
+  font-size: 3em;
+  color: #37d0d4;
+}
+
+.main-link{
+  font-size: 1.5em;
+  color: #37d0d4;
+}
+
+.main-edit{
+  font-size: 1.5em;
+  color: #37d0d4;
+}
+
+.show-h1{
+  color: #37d0d4;
+}
+
+nav{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+}
+
+.delete-button{
+  background: none;
+  border: none;
+  font-size: 1.5em;
+  color: #37d0d4;
+
 }
