--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,3 +153,26 @@ nav{
   color: #37d0d4;
 
 }
+
+.shows-heading{
+  margin-left: 24px;
+  color: #FF00FF
+}
+
+.shows-poster{
+  width: 20vw;
+  height: 40vh;
+  box-shadow: 5px 15px 30px;
+  border-radius: 10px;
+  margin: 0px 20px 10px 20px;
+  overflow: hidden;
+}
+
+.shows-container{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-auto-flow: column;
+  gap: 20px;
+  overflow-x: auto; 
+}
