--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>New Page</title>
-  </head>
-  <body>
-    <h1>Add A New Movie</h1>
-    <form action="/movies" method="POST">
-        <input type="text" placeholder="name" name="name" style="height: 30px;"><br>
-        <input type="url" placeholder="image" name="img" style="height: 30px;"><br>
-        <input type="number" placeholder="rating" name="rating" style="height: 30px;"><br>
-        <input type="submit" value="Add Item"><br>
-        <a href="/movies">Back to Home Page</a>
+  <%- include("./partials/movies-head.ejs") %>
+    <div class="new-overlay">
+      <!------------------- Header------------- -->
+      <header>
+          <h1 class="new-h1">Add Your Own Movie/Show</h1>
+      </header>
+      <!------------------------ Main ------------------>
+      <main class = "new-main">
+        <form action="/movies" method="POST">
+          <input type="text" class="text" placeholder="name" name="name" style="height: 40px;"><br>
+          <input type="url" class="url" placeholder="image" name="img" style="height: 40px;"><br>
+          <input type="number" class="number" placeholder="rating" name="rating" style="height: 40px;"><br>
+            <a href="/movies"><input type="submit" class="submit" value="Add Item"></a> <br>
+            <a class="back-home"href="/movies">Back to Home Page</a>
 
-      </form>
+        </form>
+      </main>
+    </div>
   </body>
 </html>
