--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,22 @@
 <%- include("./partials/movies-head.ejs") %>
 
+<nav>
+    <!-- Logo -->
+    <a href="#" class="logo">
+      <img src="https://i.pinimg.com/736x/0c/32/97/0c3297f3516a415219c7e89e16a4a3d2.jpg" alt="Logo">
+    </a>
+    <!-- Menu -->
+    <ul class ="menu">
+      <li><a href="/">Home</a></li>
+      <li><a href="/movies">Movies</a></li>
+      <li><a href="/shows">Shows</a></li>
+      <li><a href="/movies/new">Upload</a></li>
+      <!-- <li><a href="movies/:id">Edit</a></li> -->
+      <li><a href="#">Sign Up</a></li>
+      <li><a href="#">Sign In</a></li>
+    </ul>
+</nav>
+
     <section id="main">
       <h1 class="movies-heading">Movies</h1>
         <div class="movie-container">
@@ -16,7 +33,7 @@
         <div class="shows-container">
             <% for(let i = 0; i < shows.length; i++) {%>
             <div class="img-shows">
-              <a href="#"><img class = "shows-poster" src="<%=shows[i].img%>"></a>"
+              <a href="/shows/<%=shows[i]._id%>"><img class = "shows-poster" src="<%=shows[i].img%>"></a>"
             </div>
             <%}%>
         </div>
