--- a/views/movies/edit.ejs
+++ b/views/movies/edit.ejs
@@ -1,12 +1,11 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
   <title>Edit Page</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
-  <body> -->
-  <%- include("./partials/movies-head.ejs") %>
+  <body>
     <fieldset>
       <header>
         <h1 class = "edit-h1">Edit Page</h1>
