--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -1,4 +1,4 @@
-  <%- include("./partials/movies-head.ejs") %>
+  <%- include("../partials/movies-head.ejs") %>
     <div class="new-overlay">
       <!------------------- Header------------- -->
       <header>
@@ -7,10 +7,10 @@
       <!------------------------ Main ------------------>
       <main class = "new-main">
         <form action="/movies" method="POST">
-          <input type="text" class="text" placeholder="name" name="name" style="height: 40px;"><br>
+          <input type="text" class="text" placeholder="name" name="title" style="height: 40px;"><br>
           <input type="url" class="url" placeholder="image" name="img" style="height: 40px;"><br>
           <input type="number" class="number" placeholder="rating" name="rating" style="height: 40px;"><br>
-            <a href="/movies"><input type="submit" class="submit" value="Add Item"></a> <br>
+            <button type="Submit" name="button">Submit</button><br>
             <a class="back-home"href="/movies">Back to Home Page</a>
 
         </form>
