--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -1,12 +1,5 @@
-<!-- <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Show Page</title>
-  </head>
-  <body> -->
-  <%- include("./partials/movies-head.ejs") %>
+
+  <%- include("../partials/movies-head.ejs") %>
     <fieldset>
       <form  action="/movies/<%=movies._id%>?_method=DELETE" method="POST">
           <div class="body-overlay">
@@ -16,7 +9,7 @@
                         <nav>
                           <ul>
                             <li><a href="/movies"class="main-link">Main Page</a></li>
-                            <li><a href="/movies/<%=movies._id %>/edit"class="main-edit">Edit Movie</a></li>
+                            <li><a href="/movies/<%=movies._id %>/edit"class="main-edit">Edit</a></li>
                           </ul>
                           <input class="delete-button" type="submit" value="Delete">
                         </nav>
