--- a/views/partials/movies-head.ejs
+++ b/views/partials/movies-head.ejs
@@ -2,24 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Sitcom</title>
   </head>
   <body>
     <!-- <h1>Movies</h1> -->
-    <nav>
-        <!-- Logo -->
-        <a href="#" class="logo">
-          <img src="https://i.pinimg.com/736x/0c/32/97/0c3297f3516a415219c7e89e16a4a3d2.jpg" alt="Logo">
-        </a>
-        <!-- Menu -->
-        <ul class ="menu">
-          <li><a href="movies/">Home</a></li>
-          <li><a href="#">Movies</a></li>
-          <li><a href="#">Shows</a></li>
-          <li><a href="movies/new">Upload</a></li>
-          <!-- <li><a href="movies/:id">Edit</a></li> -->
-          <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Sign In</a></li>
-        </ul>
-    </nav>
