--- a/views/shows/new.ejs
+++ b/views/shows/new.ejs
@@ -10,7 +10,7 @@
         <input type="text" class="text" placeholder="name" name="name" style="height: 40px;"><br>
         <input type="url" class="url" placeholder="image" name="img" style="height: 40px;"><br>
         <input type="number" class="number" placeholder="rating" name="rating" style="height: 40px;"><br>
-          <button type="Submit" name="button"></button><br>
+          <button type="submit" name="button"></button><br>
           <a class="back-home"href="/">Back to Home Page</a>
 
       </form>
