--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -8,10 +8,10 @@
     </a>
     <!-- Menu -->
     <ul class ="menu">
-      <li><a href="/">Home</a></li>
+      <li><a href="movies/">Home</a></li>
       <li><a href="/movies">Movies</a></li>
       <li><a href="/shows">Shows</a></li>
-      <li><a href="/movies/new">Upload</a></li>
+      <li><a href="movies/new">Upload</a></li>
       <!-- <li><a href="movies/:id">Edit</a></li> -->
       <li><a href="#">Sign Up</a></li>
       <li><a href="#">Sign In</a></li>
