--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -10,8 +10,8 @@
           <input type="text" class="text" placeholder="name" name="title" style="height: 40px;"><br>
           <input type="url" class="url" placeholder="image" name="img" style="height: 40px;"><br>
           <input type="number" class="number" placeholder="rating" name="rating" style="height: 40px;"><br>
-            <button type="Submit" name="button">Submit</button><br>
-            <a class="back-home"href="/movies">Back to Home Page</a>
+            <button class="submit" type="Submit" name="button">Submit</button><br>
+            <a class="back-home"href="/">Back to Home Page</a>
 
         </form>
       </main>
